--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     height: 350px;
-    align-items: flex-start;
+    align-items: center;
+    position: relative;
   
     .image {
       width: 100%;
@@ -13,6 +14,26 @@
       margin-bottom: 5px;
     }
   
+    .custom-button {
+      width: 80%;
+      opacity: 0.75;
+      position: absolute;
+      top: 255px;
+      display: none;
+    }
+
+    &:hover {
+      .image {
+        opacity: 0.8;
+      }
+
+      .custom-button {
+        opacity: 0.85;
+        display: flex;
+      }
+       
+    }
+
     .collection-footer {
       width: 100%;
       height: 5%;
